--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
     </header>
     <main>
         <div style="left: 0; width: 100%; height: 100px; position: relative;"><iframe src="https://open.spotify.com/embed/artist/0wSiX5r7DNBWW5ZikbAiU1?utm_source=oembed" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" allowfullscreen allow="clipboard-write; encrypted-media; fullscreen; picture-in-picture;"></iframe></div>
+      <p><iframe width="560" height="315" src="https://www.youtube.com/embed/hrzGDFkcSy8" title="" frameBorder="0"   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  allowFullScreen><br>Powered by <a href="https://youtubeembedcode.com">how to get embed code from youtube</a> and <a href="https://utaninkomst.se/">smslån utan inkomst</a></iframe></p>
 <<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1680847236&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/ben-callahan-501382753" title="ohshesonline" target="_blank" style="color: #cccccc; text-decoration: none;"></a> · <a href="https://soundcloud.com/ben-callahan-501382753/sets/for-you" title="for you" target="_blank" style="color: #cccccc; text-decoration: none;"></a></div><p></p><a href="mailto:ohshesonlinee@gmail.com">+++E->MAiL</a></p>
 <p><a href="https://www.instagram.com/ohshesonline/">social media</a></p>
-    <p><a href="https://www.youtube.com/@ohshesonline/featured">visuals (SOON) </a></p>
+    <p><a href="https://www.youtube.com/@ohshesonline/featured">visuals & music videos </a></p>
     </main>
   </body>
 </html>
